# MAE0121-Trabalho_1

./: .gitignore  README.md  pyproject.toml
src/data/: 2025MAE121dados.xlsx
src/trabalho_1_estat/: parte_B.html  parte_B.ipynb  parte_B_leandro.ipynb  test.ipynb  test.py
