[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "trabalho-1-estat"
dynamic = ["version"]
description = 'trabalho 1 '
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
keywords = []
authors = [
  { name = "Atila da Veiga", email = "atiladv@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = ["pandas>=2.0.0",
 "ipykernel", "openpyxl", "seaborn", "matplotlib", "scipy", "statsmodels",
 "plotly","nbformat"]

[tool.hatch.version]
path = "src/trabalho_1_estat/__about__.py"

# [tool.hatch.envs.types]
# extra-dependencies = [
#   "mypy>=1.0.0",
# ]
# [tool.hatch.envs.types.scripts]
# check = "mypy --install-types --non-interactive {args:src/trabalho_1_estat tests}"

# [tool.coverage.run]
# source_pkgs = ["trabalho_1_estat", "tests"]
# branch = true
# parallel = true
# omit = [
#   "src/trabalho_1_estat/__about__.py",
# ]

[tool.coverage.paths]
trabalho_1_estat = ["src/trabalho_1_estat", "*/trabalho-1-estat/src/trabalho_1_estat"]
tests = ["tests", "*/trabalho-1-estat/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
